[project]
name = "chat-with-gmail-project"
version = "0.1.0"
description = ""
authors = [
    {name = "SaiSaran594",email = "saisaran594@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<=3.13.2"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
